fix: css on mobile modal

--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -66,8 +66,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    max-height: 100vh;
-    height: 100vh;
+    min-height: 100vh;
   }
 
   .scroll-box {
